--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,49 +13,50 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-22 Thu 18:53]
+#+CAPTION: Clock summary at [2016-09-22 Thu 23:51]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *67:21* |       |       | 100.0 |
+| *Total time*                                                                | *70:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 67:21   |       |       | 100.0 |
-| Active                                                                      |         | 67:21 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   5.8 |
+| Stories                                                                     | 70:56   |       |       | 100.0 |
+| Active                                                                      |         | 70:56 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   5.5 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.7 |
-| COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.6 |
+| COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.3 |
 | CANCELLED Remove inclusion dependencies builder factory                     |         |       |  0:14 |   0.3 |
-| COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.9 |
-| COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.8 |
+| COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.8 |
+| COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.7 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.8 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   7.8 |
-| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.9 |
-| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   4.6 |
-| COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.6 |
-| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.8 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  17.8 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   7.4 |
+| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.8 |
+| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   4.4 |
+| COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.5 |
+| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.6 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  16.9 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.5 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.8 |
-| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.2 |
-| CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.8 |
-| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   4.3 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   9.8 |
-| COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.2 |
+| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.1 |
+| CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.7 |
+| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   4.0 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   9.3 |
+| COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.1 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.4 |
-| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.6 |
-| COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.7 |
+| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.4 |
+| COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.6 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.7 |
-| COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.6 |
-| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   3.4 |
-| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   4.5 |
-| COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.7 |
+| COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.5 |
+| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   3.3 |
+| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   4.3 |
+| COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.6 |
 | CANCELLED Add a stitch prefix to stitch fields                              |         |       |  0:03 |   0.1 |
 | COMPLETED Formatter properties are not optional in assistant                |         |       |  0:10 |   0.2 |
 | COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.5 |
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.5 |
-| STARTED Consider merging provider interface with file formatter             |         |       |  0:30 |   0.7 |
-| STARTED Add type index to name and to formatter interface                   |         |       |  5:36 |   8.3 |
+| COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.2 |
+| STARTED Consider merging provider interface with file formatter             |         |       |  3:16 |   4.6 |
+| STARTED Add type index to name and to formatter interface                   |         |       |  5:36 |   7.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1042,7 +1043,7 @@ It seems its fairly trivial to extend dia using Pything:
 - [[https://github.com/GNOME/dia/tree/master/plug-ins/python][Lots of examples of python scripts]]
 
 *** STARTED Consider merging provider interface with file formatter   :story:
-
+    CLOCK: [2016-09-22 Thu 21:06]--[2016-09-22 Thu 23:52] =>  2:46
     CLOCK: [2016-09-22 Thu 18:41]--[2016-09-22 Thu 18:53] =>  0:12
     CLOCK: [2016-09-22 Thu 18:22]--[2016-09-22 Thu 18:40] =>  0:18
 
@@ -1076,6 +1077,8 @@ Tasks:
 
 - add relevant methods to formatter and implement them by copying code
   from provider.
+- remove usage of cpp_header, replace with inclusion support
+  types. Then try to remove enum.
 - replace uses of provider with formatter interface.
 - remove provider, registrar, container and all implementations in
   formatters.
@@ -1285,6 +1288,15 @@ Other names:
 
 - canonical formatter
 - reference formatter
+
+*** Tidy-up of inclusion terminology                                  :story:
+
+Random notes:
+
+- imports and exports
+- some types support both (headers)
+- some support imports only (cpp)
+- some support neither (cmakelists, etc).
 
 *** Supply formatter's container to injector                          :story:
 
