--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-22 Thu 23:51]
+#+CAPTION: Clock summary at [2016-09-22 Thu 23:57]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *70:56* |       |       | 100.0 |
+| *Total time*                                                                | *71:00* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 70:56   |       |       | 100.0 |
-| Active                                                                      |         | 70:56 |       | 100.0 |
+| Stories                                                                     | 71:00   |       |       | 100.0 |
+| Active                                                                      |         | 71:00 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   5.5 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.6 |
@@ -40,7 +40,7 @@
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.1 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.7 |
 | COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   4.0 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   9.3 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   9.2 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.1 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.4 |
 | COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.4 |
@@ -55,7 +55,7 @@
 | COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.5 |
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.5 |
 | COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.2 |
-| STARTED Consider merging provider interface with file formatter             |         |       |  3:16 |   4.6 |
+| STARTED Consider merging provider interface with file formatter             |         |       |  3:20 |   4.7 |
 | STARTED Add type index to name and to formatter interface                   |         |       |  5:36 |   7.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1043,6 +1043,7 @@ It seems its fairly trivial to extend dia using Pything:
 - [[https://github.com/GNOME/dia/tree/master/plug-ins/python][Lots of examples of python scripts]]
 
 *** STARTED Consider merging provider interface with file formatter   :story:
+    CLOCK: [2016-09-22 Thu 23:53]--[2016-09-22 Thu 23:57] =>  0:04
     CLOCK: [2016-09-22 Thu 21:06]--[2016-09-22 Thu 23:52] =>  2:46
     CLOCK: [2016-09-22 Thu 18:41]--[2016-09-22 Thu 18:53] =>  0:12
     CLOCK: [2016-09-22 Thu 18:22]--[2016-09-22 Thu 18:40] =>  0:18
