--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,50 +13,50 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-22 Thu 23:57]
+#+CAPTION: Clock summary at [2016-09-23 Fri 11:52]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *71:00* |       |       | 100.0 |
+| *Total time*                                                                | *72:30* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 71:00   |       |       | 100.0 |
-| Active                                                                      |         | 71:00 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   5.5 |
+| Stories                                                                     | 72:30   |       |       | 100.0 |
+| Active                                                                      |         | 72:30 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   5.4 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.6 |
 | COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.3 |
 | CANCELLED Remove inclusion dependencies builder factory                     |         |       |  0:14 |   0.3 |
 | COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.8 |
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.7 |
-| COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.8 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   7.4 |
-| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.8 |
-| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   4.4 |
+| COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.7 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   7.2 |
+| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.7 |
+| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   4.3 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.5 |
-| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.6 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  16.9 |
+| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.5 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  16.6 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.5 |
-| COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.8 |
+| COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.7 |
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.1 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.7 |
 | COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   4.0 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   9.2 |
-| COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.1 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   9.1 |
+| COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.0 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.4 |
-| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.4 |
-| COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.6 |
+| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.3 |
+| COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.5 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.7 |
 | COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.5 |
-| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   3.3 |
-| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   4.3 |
+| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   3.2 |
+| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   4.2 |
 | COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.6 |
 | CANCELLED Add a stitch prefix to stitch fields                              |         |       |  0:03 |   0.1 |
 | COMPLETED Formatter properties are not optional in assistant                |         |       |  0:10 |   0.2 |
 | COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.5 |
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.5 |
-| COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.2 |
-| STARTED Consider merging provider interface with file formatter             |         |       |  3:20 |   4.7 |
-| STARTED Add type index to name and to formatter interface                   |         |       |  5:36 |   7.9 |
+| COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.1 |
+| STARTED Consider merging provider interface with file formatter             |         |       |  4:50 |   6.7 |
+| STARTED Add type index to name and to formatter interface                   |         |       |  5:36 |   7.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1043,6 +1043,7 @@ It seems its fairly trivial to extend dia using Pything:
 - [[https://github.com/GNOME/dia/tree/master/plug-ins/python][Lots of examples of python scripts]]
 
 *** STARTED Consider merging provider interface with file formatter   :story:
+    CLOCK: [2016-09-23 Fri 10:21]--[2016-09-23 Fri 11:51] =>  1:30
     CLOCK: [2016-09-22 Thu 23:53]--[2016-09-22 Thu 23:57] =>  0:04
     CLOCK: [2016-09-22 Thu 21:06]--[2016-09-22 Thu 23:52] =>  2:46
     CLOCK: [2016-09-22 Thu 18:41]--[2016-09-22 Thu 18:53] =>  0:12
