--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,50 +13,50 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-23 Fri 13:16]
+#+CAPTION: Clock summary at [2016-09-23 Fri 17:26]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *73:16* |       |       | 100.0 |
+| *Total time*                                                                | *75:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 73:16   |       |       | 100.0 |
-| Active                                                                      |         | 73:16 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   5.3 |
+| Stories                                                                     | 75:44   |       |       | 100.0 |
+| Active                                                                      |         | 75:44 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   5.1 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.6 |
 | COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.3 |
 | CANCELLED Remove inclusion dependencies builder factory                     |         |       |  0:14 |   0.3 |
-| COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.8 |
+| COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.7 |
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.6 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.7 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   7.1 |
-| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.7 |
-| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   4.3 |
-| COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.5 |
-| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.5 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  16.4 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.9 |
+| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.6 |
+| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   4.1 |
+| COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.4 |
+| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.3 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  15.9 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.5 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.7 |
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.0 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.6 |
-| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.9 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   9.0 |
+| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.8 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   8.7 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.0 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.4 |
-| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.3 |
+| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.2 |
 | COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.5 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.7 |
-| COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.5 |
-| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   3.2 |
-| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   4.2 |
+| COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.4 |
+| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   3.1 |
+| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   4.0 |
 | COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.6 |
 | CANCELLED Add a stitch prefix to stitch fields                              |         |       |  0:03 |   0.1 |
 | COMPLETED Formatter properties are not optional in assistant                |         |       |  0:10 |   0.2 |
 | COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.5 |
-| COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.5 |
+| COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.4 |
 | COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.1 |
-| STARTED Consider merging provider interface with file formatter             |         |       |  5:36 |   7.6 |
-| STARTED Add type index to name and to formatter interface                   |         |       |  5:36 |   7.6 |
+| STARTED Consider merging provider interface with file formatter             |         |       |  8:04 |  10.7 |
+| STARTED Add type index to name and to formatter interface                   |         |       |  5:36 |   7.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1043,7 +1043,7 @@ It seems its fairly trivial to extend dia using Pything:
 - [[https://github.com/GNOME/dia/tree/master/plug-ins/python][Lots of examples of python scripts]]
 
 *** STARTED Consider merging provider interface with file formatter   :story:
-    CLOCK: [2016-09-23 Fri 16:49]
+    CLOCK: [2016-09-23 Fri 16:49]--[2016-09-23 Fri 17:26] =>  0:37
     CLOCK: [2016-09-23 Fri 14:12]--[2016-09-23 Fri 15:39] =>  1:27
     CLOCK: [2016-09-23 Fri 13:17]--[2016-09-23 Fri 13:41] =>  0:24
     CLOCK: [2016-09-23 Fri 13:07]--[2016-09-23 Fri 13:16] =>  0:09
@@ -1389,6 +1389,11 @@ non-dogen types into dogen. We could add a flag to models
 =is_proxy=. It would replace the notion of system models. We need to
 check the stories in the backlog around this.
 
+Interestingly we could have different defaults for formatters in proxy
+models. For example, if a model is proxy we can assume that we should
+not compute inclusion paths. This could save a lot of time when
+specifying the models in JSON.
+
 *** Move name builder into yarn                                       :story:
 
 At present we have name builder in quilt.cpp simply to build the
@@ -1464,6 +1469,11 @@ src level.
 
 In order to implement this story we need to have a working odb setup
 to test it and ensure we didn't break anything.
+
+*** Add more validation to formatter registration                     :story:
+
+We should check to ensure that only one formatter per facet is
+declared the canonical formatter.
 
 ** Deprecated
 *** CANCELLED Consider renaming formatters                            :story:
